--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     {
                         name: "El mejor folklore boliviano",
                         hash: "Rock Boliviano",
-                        description: "¡Bolivia en mi corazón",
+                        description: "¡Bolivia en mi corazón!",
                         logo: "assets/ajayu.png",
                         album:
                             "assets/ajayu.png",
@@ -341,6 +341,71 @@
                             ios: "",
                         },
                     },
+			{
+                        name: "Solo canciones de amor",
+                        hash: "Amor y nada más",
+                        description: "LOVE RADIO, reproduce canciones de amor en todos los idiomas del mundo. De hecho, no sólo en inglés sino también cada 30 minutos en árabe, chino, francés, italiano, portugués, ruso y español.",
+                        logo: "assets/loveradio.png",
+                        album:
+                            "assets/loveradio.png",
+                        cover:
+                            "assets/loveradio.png",
+                        //api: "api.php?url=https://loveradio.streamingmedia.it/play",
+                        api: "https://radioplayer.icu/api5.php?url=https://loveradio.streamingmedia.it/play",
+                        stream_url: "https://loveradio.streamingmedia.it/play",
+                        //tv_url: "",
+                        server: "spotify",
+                        program: {
+                            time: "00:00",
+                            name: "Solo canciones de amor",
+                            description: "COCHABAMBA - BOLIVIA",
+                        },
+                        social: {
+                            facebook: "",
+							whatsapp: "",
+                            //twitter: "",
+                            //tiktok: "",
+                            //youtube: "",
+                            instagram: "",
+                        },
+                        apps: {
+                            android: "",
+                            ios: "",
+                        },
+                    },
+			{
+                        name: "House, Dance, Pop",
+                        hash: "Música Elektro",
+                        description: "",
+                        logo: "assets/partyfun.png",
+                        album:
+                            "assets/partyfun.png",
+                        cover:
+                            "assets/partyfun.png",
+                        //api: "api.php?url=https://zoyradio.online:8060/partyfun.mp3",
+                        api: "https://radioplayer.icu/api5.php?url=https://zoyradio.online:8060/partyfun.mp3",
+                        stream_url: "https://zoyradio.online:8060/partyfun.mp3",
+                        //tv_url: "",
+                        server: "spotify",
+                        program: {
+                            time: "00:00",
+                            name: "Party Fun",
+                            description: "COCHABAMBA - BOLIVIA",
+                        },
+                        social: {
+                            facebook: "",
+							whatsapp: "",
+                            //twitter: "",
+                            //tiktok: "",
+                            //youtube: "",
+                            instagram: "",
+                        },
+                        apps: {
+                            android: "",
+                            ios: "",
+                        },
+                    },
+			
                 ],
             };
         </script>
