--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
                         name: "Solo canciones de amor",
                         hash: "Amor y nada más",
                         description: "LOVE RADIO, reproduce canciones de amor en todos los idiomas del mundo. De hecho, no sólo en inglés sino también cada 30 minutos en árabe, chino, francés, italiano, portugués, ruso y español.",
-                        logo: "assets/loveradio.png",
+                        logo: "assets/loveradio.jpg",
                         album:
-                            "assets/loveradio.png",
+                            "assets/loveradio.jpg",
                         cover:
-                            "assets/loveradio.png",
+                            "assets/loveradio.jpg",
                         //api: "api.php?url=https://loveradio.streamingmedia.it/play",
                         api: "https://radioplayer.icu/api5.php?url=https://loveradio.streamingmedia.it/play",
                         stream_url: "https://loveradio.streamingmedia.it/play",
