--- a/index.html
+++ b/index.html
@@ -405,6 +405,39 @@
                             ios: "",
                         },
                     },
+
+			{
+                        name: "Lo mejor de los 80s y 90s",
+                        hash: "80s y 90s",
+                        description: "",
+                        logo: "assets/kissfm.png",
+                        album:
+                            "assets/kissfm.png",
+                        cover:
+                            "assets/kissfm.png",
+                        //api: "api.php?url=https://bbkissfm.kissfmradio.cires21.com/bbkissfm.mp3?wmsAuthSign=c2VydmVyX3RpbWU9MDkvMTIvMjAyNCAwNzoxMDozNSBQTSZoYXNoX3ZhbHVlPTArSlo5N1BoSzhMOUVvRXZ6WmZPc3c9PSZ2YWxpZG1pbnV0ZXM9MTQ0MCZpZD0zNDk5Nzk5NTQ=",
+                        api: "https://radioplayer.icu/api5.php?url=https://bbkissfm.kissfmradio.cires21.com/bbkissfm.mp3?wmsAuthSign=c2VydmVyX3RpbWU9MDkvMTIvMjAyNCAwNzoxMDozNSBQTSZoYXNoX3ZhbHVlPTArSlo5N1BoSzhMOUVvRXZ6WmZPc3c9PSZ2YWxpZG1pbnV0ZXM9MTQ0MCZpZD0zNDk5Nzk5NTQ=",
+                        stream_url: "https://bbkissfm.kissfmradio.cires21.com/bbkissfm.mp3?wmsAuthSign=c2VydmVyX3RpbWU9MDkvMTIvMjAyNCAwNzoxMDozNSBQTSZoYXNoX3ZhbHVlPTArSlo5N1BoSzhMOUVvRXZ6WmZPc3c9PSZ2YWxpZG1pbnV0ZXM9MTQ0MCZpZD0zNDk5Nzk5NTQ=",
+                        //tv_url: "",
+                        server: "spotify",
+                        program: {
+                            time: "00:00",
+                            name: "Kiss FM",
+                            description: "COCHABAMBA - BOLIVIA",
+                        },
+                        social: {
+                            facebook: "",
+			    whatsapp: "",
+                            //twitter: "",
+                            //tiktok: "",
+                            //youtube: "",
+                            instagram: "",
+                        },
+                        apps: {
+                            android: "",
+                            ios: "",
+                        },
+                    },
 			
                 ],
             };
