--- a/index.html
+++ b/index.html
@@ -137,6 +137,44 @@
                             name: "Santa Clous",
                             description: "DESDE EL POLO NORTE",
                         },
+			{
+                        name: "Zoy Sports 1 | Radio",
+                        hash: "Zoy Sports 1 Radio",
+                        description: "Transmisión de eventos deportivos de Bolivia",
+                        logo: "assets/radiosantaclaus.png",
+                        album:
+                            "assets/radiosantaclaus.png",
+                        cover:
+                            "assets/radiosantaclaus.png",
+                        //api: "",
+                        api: "",
+                        stream_url: "https://stm21.voxhd.com.br:11938/stream//",
+                        //tv_url: "",
+                        server: "spotify",
+                        program: {
+                            time: "00:00",
+                            name: "Zoy Sports 1 Radio",
+                            description: "Somos un mal necesario...",
+                        },
+			{
+                        name: "Zoy Sports 2 | Radio",
+                        hash: "Zoy Sports 2 Radio",
+                        description: "Transmisión de eventos deportivos de Bolivia",
+                        logo: "assets/radiosantaclaus.png",
+                        album:
+                            "assets/radiosantaclaus.png",
+                        cover:
+                            "assets/radiosantaclaus.png",
+                        //api: "",
+                        api: "",
+                        stream_url: "https://stm18.voxhd.com.br:11922/stream//",
+                        //tv_url: "",
+                        server: "spotify",
+                        program: {
+                            time: "00:00",
+                            name: "Zoy Sports 2 Radio",
+                            description: "Somos un mal necesario...",
+                        },
                         social: {
                             facebook: "",
 							whatsapp: "",
