--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
                         name: "Zoy Sports 1 | Radio",
                         hash: "Zoy Sports 1 Radio",
                         description: "Transmisión de eventos deportivos de Bolivia",
-                        logo: "assets/radiosantaclaus.png",
+                        logo: "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         album:
-                            "assets/radiosantaclaus.png",
+                            "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         cover:
-                            "assets/radiosantaclaus.png",
+                            "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         //api: "",
                         api: "",
                         stream_url: "https://stm21.voxhd.com.br:11938/stream//",
@@ -160,11 +160,11 @@
                         name: "Zoy Sports 2 | Radio",
                         hash: "Zoy Sports 2 Radio",
                         description: "Transmisión de eventos deportivos de Bolivia",
-                        logo: "assets/radiosantaclaus.png",
+                        logo: "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         album:
-                            "assets/radiosantaclaus.png",
+                            "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         cover:
-                            "assets/radiosantaclaus.png",
+                            "https://i.ibb.co/5XCkVd3w/LOGO-Zoy-TV-Sports.png",
                         //api: "",
                         api: "",
                         stream_url: "https://stm18.voxhd.com.br:11922/stream//",
